Updated 1 file via CloudCannon.

--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -1,11 +1,17 @@
-paths:
-  static: ''
-  uploads: uploads
-timezone: Asia/Calcutta
-markdown:
-  engine: commonmark
-  options: {}
 collections_config:
-  pages:
+  commercial:
     path: surge
-    icon: wysiwyg
+    icon: camera
+    url: /[slug]
+    disable_url: false
+    _enabled_editors:
+      - visual
+      - data
+    disable_add: false
+    disable_add_folder: false
+    disable_file_actions: false
+timezone: Etc/UTC
+static_site_generator: none
+build:
+  command: echo "Serving static files directly"
+output_path: /
